--- a/index.html
+++ b/index.html
@@ -402,7 +402,7 @@
     <div class="backdrop is-hidden" data-modal>
         <div class="modal">
             <button type="button" class="btn-closed" data-modal-close>
-                <svg width="18" height="18"">
+                <svg width="18" height="18">
                     <use href="./images/icons.svg#close"></use>
                 </svg>
             </button>
