--- a/index.html
+++ b/index.html
@@ -433,10 +433,10 @@
                     <span class="form-text">Комментарий</span>
                     <textarea name="comment" rows="5" placeholder="Введите текст" class="form-comment"></textarea>
                 </label>
-                <label class="form-consent">
+                <label class="consent-label">
                     <input type="checkbox" class="check-input" />
                     <span class="check-box"></span>                    
-                    <span class="consent-text">Соглашаюсь с рассылкой и принимаю</span>
+                    Соглашаюсь с рассылкой и принимаю
                     <a class="consent-link" href="">Условия договора</a>
                 </label>
                 <button type="submit" class="form-button">Отправить</button>
