--- a/index.html
+++ b/index.html
@@ -436,7 +436,7 @@
                 <label class="consent-label">
                     <input type="checkbox" class="check-input" />
                     <span class="check-box"></span>                    
-                    Соглашаюсь с рассылкой и принимаю
+                    Соглашаюсь с рассылкой и принимаю&nbsp;
                     <a class="consent-link" href="">Условия договора</a>
                 </label>
                 <button type="submit" class="form-button">Отправить</button>
